--- a/pkg/curatedpackages/testdata/awssecret_defaultregion.yaml
+++ b/pkg/curatedpackages/testdata/awssecret_defaultregion.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 stringData:
-  ID: test-access-id
-  SECRET: test-access-key
+  ID: "test-access-id"
+  SECRET: "test-access-key"
   REGION: us-west-2
 kind: Secret
 metadata:
