--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -4850,82 +4850,38 @@ spec:
                 description: Network provides the custom network setting for the machine.
                 properties:
                   directNetworkInterfaces:
-                    description: DirectNetworkInterfaces is the configuration requirements
-                      for DNIs
+                    description: DirectNetworkInterfaces contains a list of direct
+                      network interface (DNI) configuration.
                     items:
-                      description: AWSSnowDirectNetworkInterface is configuration
-                        of DNIs specified by customers.
+                      description: SnowDirectNetworkInterface defines a direct network
+                        interface (DNI) configuration.
                       properties:
                         dhcp:
-                          description: DHCP is whether we assign ip using DHCP for
-                            this DNI
+                          description: DHCP decides whether the ip assigned by using
+                            DHCP.
                           type: boolean
                         index:
-                          description: Index is the index number of DNI
+                          description: Index is the index number of DNI.
                           maximum: 8
                           minimum: 1
                           type: integer
-                        ipPool:
-                          description: IPPool is the ip pool for this DNI if customers
-                            want to specify
+                        ipPoolRef:
+                          description: IPPool contains a reference to the snow ip
+                            pool. When specified, this interface will use a random
+                            IP from that pool.
                           properties:
-                            apiVersion:
-                              description: 'APIVersion defines the versioned schema
-                                of this representation of an object. Servers should
-                                convert recognized schemas to the latest internal
-                                value, and may reject unrecognized values. More info:
-                                https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-                              type: string
                             kind:
-                              description: 'Kind is a string value representing the
-                                REST resource this object represents. Servers may
-                                infer this from the endpoint the client submits requests
-                                to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
                               type: string
-                            metadata:
-                              type: object
-                            spec:
-                              description: AWSSnowIPPoolSpec defines the desired state
-                                of AWSSnowIPPool
-                              properties:
-                                pools:
-                                  description: IPPools is the configuration of static
-                                    ips used for machine's ip.
-                                  items:
-                                    description: IPPool is the configuration of static
-                                      ips used for machine's ip.
-                                    properties:
-                                      gateway:
-                                        description: Gateway is the gateway of this
-                                          subnet. Used for routing purpose
-                                        type: string
-                                      ipEnd:
-                                        description: IPEnd is the end of an ip range
-                                        type: string
-                                      ipStart:
-                                        description: IPStart is the start of an ip
-                                          range
-                                        type: string
-                                      subnet:
-                                        description: Subnet is customers' network
-                                          subnet, we can use it to determine if two
-                                          ip addresses are in the same subnet.
-                                        type: string
-                                    type: object
-                                  type: array
-                              type: object
-                            status:
-                              description: AWSSnowIPPoolStatus defines the observed
-                                state of AWSSnowIPPool
-                              type: object
+                            name:
+                              type: string
                           type: object
                         primary:
                           description: Primary indicates whether the DNI is primary
-                            or not
+                            or not.
                           type: boolean
                         vlanID:
-                          description: VlanID is the vlan ID assigned by the user
-                          format: int64
+                          description: VlanID is the vlan id assigned by the user.
+                          format: int32
                           maximum: 4095
                           minimum: 0
                           type: integer
@@ -4934,7 +4890,7 @@ spec:
                     minItems: 1
                     type: array
                   dns:
-                    description: DNS is just for bottlerocket static ip config
+                    description: DNS specifies a list of static IPs.
                     items:
                       type: string
                     type: array
@@ -4954,6 +4910,7 @@ spec:
                 type: string
             required:
             - amiID
+            - network
             type: object
           status:
             description: SnowMachineConfigStatus defines the observed state of SnowMachineConfig.
@@ -6326,6 +6283,27 @@ webhooks:
     - UPDATE
     resources:
     - snowdatacenterconfigs
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: eksa-webhook-service
+      namespace: eksa-system
+      path: /validate-anywhere-eks-amazonaws-com-v1alpha1-snowippool
+  failurePolicy: Fail
+  name: validation.snowippool.anywhere.amazonaws.com
+  rules:
+  - apiGroups:
+    - anywhere.eks.amazonaws.com
+    apiVersions:
+    - v1alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - snowippools
   sideEffects: None
 - admissionReviewVersions:
   - v1
