--- a/internal/test/envtest/config/snow-crds.yaml
+++ b/internal/test/envtest/config/snow-crds.yaml
@@ -122,6 +122,7 @@ spec:
                 enum:
                 - SFP_PLUS
                 - QSFP
+                - RJ45
                 type: string
               region:
                 description: The AWS Region the cluster lives in.
@@ -257,8 +258,8 @@ spec:
             description: AWSSnowIPPoolSpec defines the desired state of AWSSnowIPPool
             properties:
               pools:
-                description: IPPools is the configuration of static ips used for machine's
-                  ip.
+                description: IPPools defines a range of ip addresses for static IP
+                  configurations.
                 items:
                   description: IPPool is the configuration of static ip, it provides
                     a range of ip addresses
@@ -275,7 +276,7 @@ spec:
                       type: string
                     subnet:
                       description: Subnet is customers' network subnet, we can use
-                        it to determine if two ip addresses are in the same subnet.
+                        it to determine whether an ip is in this subnet
                       type: string
                   type: object
                 type: array
@@ -553,15 +554,40 @@ spec:
                             of ip addresses If IPPool is not nil, we will allocate
                             an ip address from this pool to this DNI
                           properties:
+                            apiVersion:
+                              description: API version of the referent.
+                              type: string
+                            fieldPath:
+                              description: 'If referring to a piece of an object instead
+                                of an entire object, this string should contain a
+                                valid JSON/Go field access statement, such as desiredState.manifest.containers[2].
+                                For example, if the object reference is to a container
+                                within a pod, this would take on a value like: "spec.containers{name}"
+                                (where "name" refers to the name of the container
+                                that triggered the event) or if no container name
+                                is specified "spec.containers[2]" (container with
+                                index 2 in this pod). This syntax is chosen only to
+                                have some well-defined way of referencing a part of
+                                an object. TODO: this design is not final and this
+                                field is subject to change in the future.'
+                              type: string
                             kind:
-                              description: Kind is the type of resource being referenced
+                              description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
                               type: string
                             name:
-                              description: Name is the name of resource being referenced
+                              description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
                               type: string
-                          required:
-                          - kind
-                          - name
+                            namespace:
+                              description: 'Namespace of the referent. More info:
+                                https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                              type: string
+                            resourceVersion:
+                              description: 'Specific resourceVersion to which this
+                                reference is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                              type: string
+                            uid:
+                              description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
+                              type: string
                           type: object
                         primary:
                           description: Primary indicates whether the DNI is primary
@@ -577,11 +603,6 @@ spec:
                       type: object
                     maxItems: 8
                     minItems: 1
-                    type: array
-                  dns:
-                    description: DNS is just for bottlerocket static ip config
-                    items:
-                      type: string
                     type: array
                 required:
                 - directNetworkInterfaces
@@ -650,6 +671,7 @@ spec:
                 enum:
                 - SFP_PLUS
                 - QSFP
+                - RJ45
                 type: string
               providerID:
                 description: ProviderID is the unique identifier as specified by the
@@ -738,6 +760,8 @@ spec:
                   built-in support for gzip-compressed user data user data stored
                   in aws secret manager is always gzip-compressed.
                 type: boolean
+            required:
+            - network
             type: object
           status:
             description: AWSSnowMachineStatus defines the observed state of AWSSnowMachine
@@ -1132,17 +1156,47 @@ spec:
                                     we will allocate an ip address from this pool
                                     to this DNI
                                   properties:
+                                    apiVersion:
+                                      description: API version of the referent.
+                                      type: string
+                                    fieldPath:
+                                      description: 'If referring to a piece of an
+                                        object instead of an entire object, this string
+                                        should contain a valid JSON/Go field access
+                                        statement, such as desiredState.manifest.containers[2].
+                                        For example, if the object reference is to
+                                        a container within a pod, this would take
+                                        on a value like: "spec.containers{name}" (where
+                                        "name" refers to the name of the container
+                                        that triggered the event) or if no container
+                                        name is specified "spec.containers[2]" (container
+                                        with index 2 in this pod). This syntax is
+                                        chosen only to have some well-defined way
+                                        of referencing a part of an object. TODO:
+                                        this design is not final and this field is
+                                        subject to change in the future.'
+                                      type: string
                                     kind:
-                                      description: Kind is the type of resource being
-                                        referenced
+                                      description: 'Kind of the referent. More info:
+                                        https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
                                       type: string
                                     name:
-                                      description: Name is the name of resource being
-                                        referenced
+                                      description: 'Name of the referent. More info:
+                                        https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
                                       type: string
-                                  required:
-                                  - kind
-                                  - name
+                                    namespace:
+                                      description: 'Namespace of the referent. More
+                                        info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                                      type: string
+                                    resourceVersion:
+                                      description: 'Specific resourceVersion to which
+                                        this reference is made, if any. More info:
+                                        https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                                      type: string
+                                    uid:
+                                      description: 'UID of the referent. More info:
+                                        https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
+                                      type: string
                                   type: object
                                 primary:
                                   description: Primary indicates whether the DNI is
@@ -1158,11 +1212,6 @@ spec:
                               type: object
                             maxItems: 8
                             minItems: 1
-                            type: array
-                          dns:
-                            description: DNS is just for bottlerocket static ip config
-                            items:
-                              type: string
                             type: array
                         required:
                         - directNetworkInterfaces
@@ -1232,6 +1281,7 @@ spec:
                         enum:
                         - SFP_PLUS
                         - QSFP
+                        - RJ45
                         type: string
                       providerID:
                         description: ProviderID is the unique identifier as specified
@@ -1327,6 +1377,8 @@ spec:
                           cloud-init has built-in support for gzip-compressed user
                           data user data stored in aws secret manager is always gzip-compressed.
                         type: boolean
+                    required:
+                    - network
                     type: object
                 required:
                 - spec
@@ -1612,8 +1664,7 @@ spec:
           value: /home/.aws/credentials
         - name: AWS_CA_BUNDLE
           value: /home/.aws/ca-bundle
-        image: ${SNOW_CONTROLLER_IMAGE}
-        imagePullPolicy: IfNotPresent
+        image: .dkr.ecr.us-west-2.amazonaws.com/cluster-api-provider-aws-snow-ecr:v0.1.0
         livenessProbe:
           httpGet:
             path: /healthz
