--- a/pkg/curatedpackages/config/registrymirrorsecret.yaml
+++ b/pkg/curatedpackages/config/registrymirrorsecret.yaml
@@ -1,5 +1,6 @@
 apiVersion: v1
 stringData:
+  ENDPOINT: {{.mirrorEndpoint}}
   USERNAME: {{.mirrorUsername}}
   PASSWORD: {{.mirrorPassword}}
   CACERTCONTENT: |
