Add snowippool crd and register webhook

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -19,6 +19,7 @@ resources:
 - bases/anywhere.eks.amazonaws.com_tinkerbelltemplateconfigs.yaml
 - bases/anywhere.eks.amazonaws.com_snowdatacenterconfigs.yaml
 - bases/anywhere.eks.amazonaws.com_snowmachineconfigs.yaml
+- bases/anywhere.eks.amazonaws.com_snowippools.yaml
 - bases/anywhere.eks.amazonaws.com_nutanixmachineconfigs.yaml
 - bases/anywhere.eks.amazonaws.com_nutanixdatacenterconfigs.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
