Add snowippool rbac

--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -5602,6 +5602,7 @@ rules:
   - dockerdatacenterconfigs
   - nutanixdatacenterconfigs
   - nutanixmachineconfigs
+  - snowippools
   - snowmachineconfigs
   - vspheredatacenterconfigs
   - vspheremachineconfigs
@@ -5622,6 +5623,7 @@ rules:
   - cloudstackmachineconfigs/finalizers
   - clusters/finalizers
   - dockerdatacenterconfigs/finalizers
+  - snowippools/finalizers
   - snowmachineconfigs/finalizers
   - vspheredatacenterconfigs/finalizers
   - vspheremachineconfigs/finalizers
@@ -5636,6 +5638,7 @@ rules:
   - cloudstackmachineconfigs/status
   - clusters/status
   - dockerdatacenterconfigs/status
+  - snowippools/status
   - snowmachineconfigs/status
   - vspheredatacenterconfigs/status
   - vspheremachineconfigs/status
@@ -5735,6 +5738,7 @@ rules:
   - infrastructure.cluster.x-k8s.io
   resources:
   - awssnowclusters
+  - awssnowippools
   - awssnowmachinetemplates
   - dockerclusters
   - dockermachinetemplates
