add credentials for etcd

--- a/pkg/providers/vsphere/config/template-cp.yaml
+++ b/pkg/providers/vsphere/config/template-cp.yaml
@@ -531,6 +531,10 @@ spec:
       caCert: |
 {{ .registryCACert | indent 8 }}
       {{- end }}
+      {{- if .registryAuth }}
+      username: {{.registryUsername}}
+      password: {{.registryPassword}}
+      {{- end }}
 {{- end }}
   infrastructureTemplate:
     apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
