--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -6416,7 +6416,7 @@ webhooks:
       namespace: eksa-system
       path: /validate-anywhere-eks-amazonaws-com-v1alpha1-tinkerbelldatacenterconfig
   failurePolicy: Fail
-  name: vtinkerbelldatacenterconfig.kb.io
+  name: validation.tinkerbelldatacenterconfig.anywhere.amazonaws.com
   rules:
   - apiGroups:
     - anywhere.eks.amazonaws.com
@@ -6437,7 +6437,7 @@ webhooks:
       namespace: eksa-system
       path: /validate-anywhere-eks-amazonaws-com-v1alpha1-tinkerbellmachineconfig
   failurePolicy: Fail
-  name: vtinkerbellmachineconfig.kb.io
+  name: validation.tinkerbellmachineconfig.anywhere.amazonaws.com
   rules:
   - apiGroups:
     - anywhere.eks.amazonaws.com
