--- a/test/framework/testdata/hpa_busybox.yaml
+++ b/test/framework/testdata/hpa_busybox.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: busybox
-          image: busybox
+          image: busybox:1.34
           resources:
             limits:
               cpu: 500m
