add base64 encoding

--- a/pkg/curatedpackages/testdata/values_empty_awssecret.yaml
+++ b/pkg/curatedpackages/testdata/values_empty_awssecret.yaml
@@ -1,8 +1,8 @@
 registryMirrorSecret:
-  endpoint: "1.2.3.4:443"
-  username: "username"
-  password: "password"
-  cacertcontent: "-----BEGIN CERTIFICATE-----\nabc\nefg\n-----END CERTIFICATE-----\n"
+  endpoint: "MS4yLjMuNDo0NDM="
+  username: "dXNlcm5hbWU="
+  password: "cGFzc3dvcmQ="
+  cacertcontent: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCmFiYwplZmcKLS0tLS1FTkQgQ0VSVElGSUNBVEUtLS0tLQo="
 awsSecret:
   id: ""
   secret: ""
