--- a/pkg/curatedpackages/testdata/values_empty_registrymirrorsecret.yaml
+++ b/pkg/curatedpackages/testdata/values_empty_registrymirrorsecret.yaml
@@ -4,6 +4,6 @@ registryMirrorSecret:
   password: ""
   cacertcontent: ""
 awsSecret:
-  id: "test-access-id"
-  secret: "test-access-key"
-  region: "test-region"
+  id: "dGVzdC1hY2Nlc3MtaWQ="
+  secret: "dGVzdC1hY2Nlc3Mta2V5"
+  region: "dGVzdC1yZWdpb24="
