--- a/pkg/curatedpackages/testdata/values_test.yaml
+++ b/pkg/curatedpackages/testdata/values_test.yaml
@@ -1,9 +1,9 @@
 registryMirrorSecret:
-  endpoint: "1.2.3.4:443"
-  username: "username"
-  password: "password"
-  cacertcontent: "-----BEGIN CERTIFICATE-----\nabc\nefg\n-----END CERTIFICATE-----\n"
+  endpoint: "MS4yLjMuNDo0NDM="
+  username: "dXNlcm5hbWU="
+  password: "cGFzc3dvcmQ="
+  cacertcontent: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCmFiYwplZmcKLS0tLS1FTkQgQ0VSVElGSUNBVEUtLS0tLQo="
 awsSecret:
-  id: "test-access-id"
-  secret: "test-access-key"
-  region: "test-region"
+  id: "dGVzdC1hY2Nlc3MtaWQ="
+  secret: "dGVzdC1hY2Nlc3Mta2V5"
+  region: "dGVzdC1yZWdpb24="
