Remove refs on master node role

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -40,5 +40,5 @@ spec:
       terminationGracePeriodSeconds: 10
       tolerations:
         - effect: NoSchedule
-          key: node-role.kubernetes.io/master
+          key: node-role.kubernetes.io/control-plane
       serviceAccountName: manager
