--- a/pkg/providers/tinkerbell/testdata/expected_results_cluster_tinkerbell_bottlerocket_cp_minimal_registry_mirror.yaml
+++ b/pkg/providers/tinkerbell/testdata/expected_results_cluster_tinkerbell_bottlerocket_cp_minimal_registry_mirror.yaml
@@ -45,6 +45,8 @@ spec:
       bottlerocketBootstrap:
         imageRepository: public.ecr.aws/l0g8r8j6/bottlerocket-bootstrap
         imageTag: v1-21-4-eks-a-v0.0.0-dev-build.158
+      registryMirror:
+        endpoint: 1.2.3.4:1234/v2/eks-anywhere
       apiServer:
         extraArgs:
           feature-gates: ServiceLoadBalancerClass=true
