adding watches for tinkerbell and docker configs

--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -5603,6 +5603,8 @@ rules:
   - nutanixmachineconfigs
   - snowippools
   - snowmachineconfigs
+  - tinkerbelldatacenterconfigs
+  - tinkerbellmachineconfigs
   - vspheredatacenterconfigs
   - vspheremachineconfigs
   verbs:
