--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -43,6 +43,8 @@ rules:
   - nutanixmachineconfigs
   - snowippools
   - snowmachineconfigs
+  - tinkerbelldatacenterconfigs
+  - tinkerbellmachineconfigs
   - vspheredatacenterconfigs
   - vspheremachineconfigs
   verbs:
